<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/nav_news"/>
        <item
            android:id="@+id/nav_pics"
            android:icon="@drawable/ic_menu_images"
            android:title="@string/nav_images"/>
        <item
            android:id="@+id/nav_videos"
            android:icon="@drawable/ic_menu_videos"
            android:title="@string/nav_videos"/>
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_menu_favorite"
            android:title="@string/nav_favorites"/>

        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_tools"
            android:title="@string/nav_tools"/>

    </group>

    <item android:title="@string/nav_more">
        <menu>

            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_setting"
                android:title="@string/nav_setting"/>

            <item
                android:id="@+id/nav_about_app"
                android:icon="@drawable/ic_menu_about_app"
                android:title="@string/nav_about_app"/>
        </menu>
    </item>

</menu>
